# tiling

./: .gitignore  main.py  pyproject.toml
ide/: tiling.sublime-project
tiling/: __init__.py  arctic_circle.py  arctic_circle_.cpp  arctic_circle_compiled.cpp  util.py  visuals.py
